Some cosmetic fixes on padding and line breaks on wider desktop viewports

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -32,5 +32,5 @@ iframe {
 
 #padding-row {
 
-	padding-left: 10px;
+	padding-left: 30px;
 }
